加入了home上面的三項

--- a/devServer/views/home.jade
+++ b/devServer/views/home.jade
@@ -4,3 +4,31 @@ block head
   link(rel="stylesheet", href="asset/stylesheets/main.css")
 
 block content
+  .container.marketing
+    .row
+      .col-lg-4
+        img.img-circle(src='asset/img/home/user.png', alt='User', style='width:140px;height:140px;border-radius:0')
+        h2.header 用戶認證
+        p
+          | 透過完整的生體認證，您不必擔心與自己是與機器人交換禮物，也不必擔心被不肖商人轉賣，不論是愛心還是關心，「幸福包裹」一定會安全的在指定日期送到指定對象的手中，也不必擔心愛心捐款用途不明。
+          br
+          | 傳遞幸福，是我們的使命。
+        p
+          a.btn.btn-default(href='#', role='button') 認證註冊 »
+      .col-lg-4
+        img.img-circle(src='asset/img/home/browser.png', alt='User', style='width:140px;min-height:140px;border-radius:0')
+        h2.header 專屬平台
+        p
+          | 「幸福包裹」擁有專屬的商務平台，確保用戶的安全，除了自己的專屬平台，我們與許多的網路平台結盟，讓您能選購來自各方的禮物，購物、送禮、包裝、準時寄送，「幸福包裹」網路一台一手包辦。
+        br
+        p
+          a.btn.btn-default(href='#', role='button') 禮物百貨 »
+      .col-lg-4
+        img.img-circle(src='asset/img/home/heart.png', alt='User', style='width:140px;min-height:140px;border-radius:0')
+        h2.header 愛心捐贈
+        p
+          | 除了關心朋友，有更多需要關注的孩子們，「幸福包裹」與家扶中心結盟，每階段累計的捐贈款，將會在特定的節日變成各種驚喜出現在孩子們的生活中，這個世界需要您的愛心與溫暖。
+        br
+        p
+          a.btn.btn-default(href='#', role='button') 愛心集資 »
+
