--- a/devServer/views/footer.jade
+++ b/devServer/views/footer.jade
@@ -12,3 +12,7 @@ footer
       | 營業時間：10:00 ~ 18:00 (一~五)
       br
       | 工作室地址：台北市新生南路123巷1-1號
+    .col-md-3
+      h3.header(style="margin-top:0px; width:230px; float:right")
+        img(src="/asset/img/home/heart.png", alt="", style="width:70px; margin-top:-18px")
+        | 家扶中心結盟
