--- a/devServer/views/home.jade
+++ b/devServer/views/home.jade
@@ -31,5 +31,21 @@ block content
         br
         p
           a.btn.btn-default(href='#', role='button') 愛心集資 »
+    .row.featurette
+      .col-md-5
+        br
+        br
+        br
+        img.featurette-image.img-responsive(src='asset/img/home/gift.png', alt='')
+      .col-md-7
+        h2.featurette-heading
+          | 多樣化的禮物選擇
+        h3
+          span.text-muted 選擇包裝與寄送日期
+        p.lead
+          | 散熱機構效率提升，重量減輕 15~30%。簡潔設計，相當容易維護與只用，大幅降低製造及維修成本。
+          | 另外，防水結構採用不鏽鋼 SUS304 支架 / 螺絲 + 矽膠級防水膠條。不鏽鋼經久耐用、絕不生鏽配上高等級防水矽膠，二道防水設計保護。
+  br
+  br
   include footer
 
